fix methods and test on Sensor Type REST Controller #449